# fractal-sim

./: Barnsley.hs  CHANGELOG.md  Main.hs  README.md  Sierpinski.hs  Types.hs  fractal-sim.cabal
