cabal-version:       >=1.10
name:                fractal-sim
version:             0.1.0.0
synopsis:            playing with fractals
license:             MIT
license-file:        LICENSE
author:              Michael Christensen
maintainer:          chmdko@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable fractal-sim
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.14
                     , random
                     , matrix
                     , Chart
                     , Chart-cairo
  default-language:    Haskell2010
  other-modules:       Sierpinski
                     , Barnsley
                     , Types
